Frontend - task 4 completed

--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
         "react-dom": "^16.2.0"
     },
     "dependencies": {
-        "react-paginate": "^5.1.0"
+        "react-paginate": "^5.1.0",
+        "reactstrap": "^5.0.0-beta.2"
     }
 }
